<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.android.mobgage.fragments.SimulationCompareFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/details_bg"
        android:padding="10dp">



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                style="@style/style_black_text_medium_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulation_compare_all_morgage"
                android:layout_marginRight="30dp"
                 />

            <TextView
                style="@style/style_black_text_medium_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulation_compare_monthly_return"
                android:layout_marginRight="30dp"
                />

            <TextView
                style="@style/style_black_text_medium_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulation_compare_offers"
                />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    </LinearLayout>
</FrameLayout>
