<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dip"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="@drawable/grey_title" >

            <TextView
                style="@style/style_white_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" 
                android:text="@string/main_title"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/main_compare_button"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="50dip"
            android:background="@drawable/blue_button" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <TextView
                    style="@style/style_white_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/main_btn1" />
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/main_myMotogage_button"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:background="@drawable/blue_button" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <TextView
                    style="@style/style_white_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/main_btn4" />
            </LinearLayout>
        </FrameLayout>
        
        <FrameLayout
            android:id="@+id/main_recomend_button"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:background="@drawable/blue_button" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <TextView
                    android:id="@+id/main_recomend_button_text"
                    style="@style/style_white_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/main_btn2" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dip"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/main_info_button"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:background="@drawable/grey_button" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <TextView
                    style="@style/style_black_text_bold"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/main_btn3" />
            </LinearLayout>
        </FrameLayout>

        <TextView
            style="@style/style_black_text_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_comment" />
    </LinearLayout>

</FrameLayout>