<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/details_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="@drawable/grey_title" >

            <TextView
                style="@style/style_white_text"
                android:text="@string/list_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" />
        </FrameLayout>

        <ListView
            android:id="@+id/list_list"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:divider="@null"
            tools:listitem="@layout/route_row"
            android:listSelector="@color/transparent" >
        </ListView>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_gravity="bottom"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <FrameLayout
                android:id="@+id/list_recommendation_btn"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginRight="10dip"
                android:background="@drawable/blue_button" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" >

                    <TextView
                        style="@style/style_white_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/list_btn2" />
                </LinearLayout>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/list_add_proposal_btn"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/blue_button" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" >

                    <TextView
                        style="@style/style_white_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/list_btn1" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
        
    </LinearLayout>

    

</LinearLayout>